# action-learning-ais5

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/bench/: efficiency.yaml
configs/eval/: specialists_screenspot.yaml  zero_shot_qwen.yaml
configs/train/: lora_qwen.yaml
notebooks/: 00_baseline_qwen_screenspot_v2.ipynb  01_task1_lora_adaptation.ipynb  02_task2_resolution_crop.ipynb  03_task3_efficiency_quant.ipynb  04_specialists_baseline.ipynb  demo_walkthrough.ipynb
scripts/: demo.py  download_papers.py
src/ais5/: __init__.py  cli.py
src/ais5/adapt/: __init__.py  data.py  lora.py  train.py
src/ais5/bench/: __init__.py  latency.py  memory.py  pareto.py  profile.py
src/ais5/data/: __init__.py  osworld_g.py  registry.py  screenspot.py  types.py
src/ais5/eval/: __init__.py  breakdown.py  click.py  runner.py
src/ais5/models/: __init__.py  base.py  paligemma.py  qwen.py  registry.py  specialists.py
src/ais5/prompt/: __init__.py  action.py  templates.py
src/ais5/quant/: __init__.py  recipes.py
src/ais5/tile/: __init__.py  anyres.py  crop_then_click.py
src/ais5/utils/: __init__.py  config.py  io.py  logging.py  seed.py
tests/: test_action_parser.py  test_adapt.py  test_anyres.py  test_breakdown.py  test_click_eval.py  test_components.py  test_config.py  test_crop_then_click.py  test_pareto.py  test_quant.py  test_screenspot_loader.py
