[project]
name = "ais5"
version = "0.1.0"
description = "AIS 5 — Small VLMs vs. GUI Specialists. Efficiency-performance trade-offs for on-device screen agents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Dong Yiwei" },
    { name = "Shanmuga Perumal Balamurugan" },
    { name = "Ali Cherri" },
]

# Core deps that every task needs.
# Heavier tooling (quantization kernels, training extras) is in optional groups.
dependencies = [
    "torch>=2.4,<2.6",
    "torchvision>=0.19,<0.21",
    "transformers>=4.49,<5",
    "accelerate>=0.34",
    "datasets>=3.0",
    "huggingface-hub>=0.25",
    "safetensors>=0.4",
    "peft>=0.13",
    "qwen-vl-utils>=0.0.10",
    "pillow>=10.4",
    "numpy>=1.26,<2.2",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.8",
    "typer>=0.12",
    "psutil>=6.0",
]

[project.optional-dependencies]
# Quantization kernels — Linux/CUDA only. Skipped on macOS by environment marker.
quant = [
    "bitsandbytes>=0.44; platform_system != 'Darwin'",
    "auto-gptq>=0.7.1; platform_system != 'Darwin'",
    "autoawq>=0.2.7; platform_system != 'Darwin'",
    "optimum>=1.23",
]
notebook = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

# PEP 735 dependency groups. `dev` is included by default via [tool.uv]
# below — `uv sync` gives you a working dev environment in one shot.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "openpyxl>=3.1",
]

[project.scripts]
ais5-eval = "ais5.cli:eval_cmd"
ais5-train = "ais5.cli:train_cmd"
ais5-bench = "ais5.cli:bench_cmd"
ais5-papers = "ais5.cli:papers_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ais5"]

[tool.uv]
# Make `uv sync` fetch dev tools by default; matches expectation that this is a working repo.
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "SIM", "RUF"]
# RUF002/RUF003: keep × → ≤ in docstrings/comments — they're project-meaningful.
ignore = ["E501", "B008", "RUF002", "RUF003", "RUF012"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "gpu: requires a CUDA-capable GPU",
    "slow: long-running",
    "remote: needs network or HF Hub access",
]
